kubeconfig.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prism-demo
  labels:
    app: prism-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prism-demo
  template:
    metadata:
      labels:
        app: prism-demo
    spec:
      containers:
      - name: prism-demo
        image: peterbb148/prism-demo
        ports:
        - containerPort: 4010
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: prism-demo-service
spec:
  selector:
    app: prism-demo
  ports:
    - protocol: TCP
      port: 4010
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prism-demo-ingress
  annotations:
    kubernetes.io/ingress-class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: prism-demo-service
          servicePort: 4010
